# gen3-metadata

./: .gitignore  README.md  build.sh  example_notebook.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml
gen3-metadata-R/: README.md
gen3-metadata-R/R/: generics.R
gen3-metadata-R/man/: get_base_url.Rd  load_key_file.Rd
gen3metadata-R/: DESCRIPTION  NAMESPACE  README.md
gen3metadata-R/R/: fetch_all_nodes.R  filter_data_release.R  gen3_metadata.R  generics.R  get_base_url.R  get_node_order.R  load_key_file.R  methods-gen3_metadata.R
gen3metadata-R/man/: Gen3MetadataParser.Rd  authenticate.Rd  fetch_data.Rd  print.Rd
gen3metadata-R/tests/: testthat.R
gen3metadata-R/tests/testthat/: test-authenticate.R  test-fetch_all_nodes.R  test-fetch_data.R  test-gen3_metadata.R  test-get_base_url.R  test-get_node_order.R  test-load_key_file.R
src/gen3_metadata/: __init__.py  _filter.py  gen3_metadata_parser.py
tests/: test_gen3_metadata_parser.py
