[project]
name = "gen3-metadata"
version = "1.4.1"
description = "User friendly tools for downloading and manipulating gen3 metadata"
authors = [
    {name = "JoshuaHarris391",email = "harjo391@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.9.5,<4"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyjwt (>=2.10.1)",
    "gen3 (>=4.27.5,<5.0.0)",
    "gen3_validator (>=2.0.1,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1,<9.0.0"
ipykernel = ">=6.29.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
